--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "vite",
+    "start": "vite",
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "axios": "^1.3.3",
+    "btoa": "^1.2.1",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "vite-plugin-mix": "^0.4.0",
     "vue": "^3.2.45"
